@@ -1,1 +1,2 @@
-telah menyelesaikan kuis
+telah menyelesaikan kuiS
+kami mengunduh file github Q01
